[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MSprocessing"
version = "0.1.0"
description = "Mass spec processing pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "plotly>=5.18",
  "umap-learn>=0.5.4",
  "combat>=0.3.3",
  "pimms-learn>=0.5.0",
  "fastai>=2.7",
    "notebook",
  "ipykernel",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "kaleido>=0.2.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["MSprocessing*"]
